tests/error/comptime/check_slice_construction01.bz
function foo() -> *int32
{
	let i = 0;
	return &i;
}

function test()
{
	(consteval {
		let i = 0;
		__builtin_slice_from_ptrs(foo(), &i);
	});
}
